--- a/package.json
+++ b/package.json
@@ -30,11 +30,16 @@
   "scripts": {
     "build": "microbundle",
     "prepare": "npm run build",
+    "jsdocs": "typedoc --options typedoc.config.json",
     "test": "vitest"
   },
   "devDependencies": {
     "@stablelib/sha256": "^1.0.1",
     "@types/elliptic": "^6.4.14",
+    "typedoc": "^0.23.25",
+    "typedoc-plugin-missing-exports": "^1.0.0",
+    "typedoc-plugin-rename-defaults": "^0.6.4",
+    "typescript": "^4.9.5",
     "vitest": "^0.28.4"
   },
   "dependencies": {
