--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@stablelib/sha256": "^1.0.1",
     "@types/elliptic": "^6.4.14",
     "typedoc": "^0.23.25",
+    "typedoc-plugin-markdown": "^3.14.0",
     "typedoc-plugin-missing-exports": "^1.0.0",
     "typedoc-plugin-rename-defaults": "^0.6.4",
     "typescript": "^4.9.5",
