--- a/tsconfig-original.json
+++ b/tsconfig-original.json
@@ -3,15 +3,18 @@
     "target": "ESNext",
     "module": "ESNext",
     "lib": ["dom", "es6", "es2015.promise"],
+    "declaration": true,
+    "declarationMap": true,
     "sourceMap": true,
     "outDir": "dist",
     "strict": true,
     "noImplicitThis": false,
     "moduleResolution": "node",
     "types": [],
-    //"allowSyntheticDefaultImports": true,
+    "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "baseUrl": "./src"
   },
   "include": ["./src"],
   "exclude": ["**/__tests__/*", "node_modules", "dist"]
