Implement key agreement

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@stablelib/sha256": "^1.0.1",
+    "@stablelib/x25519": "^1.0.3",
     "typedoc": "^0.23.25",
     "typedoc-plugin-markdown": "^3.14.0",
     "typedoc-plugin-missing-exports": "^1.0.0",
